--- a/app/src/main/res/layout/item_listview_contact.xml
+++ b/app/src/main/res/layout/item_listview_contact.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin"
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/layout_padding"
     android:orientation="horizontal">
 
     <ImageView
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_left"
         android:orientation="vertical">
 
         <TextView
@@ -30,8 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top"
             android:text="@string/phone"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="10sp" />
     </LinearLayout>
 </LinearLayout>
