--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="activity_vertical_margin">15dp</dimen>
     <dimen name="activity_horizontal_margin">15dp</dimen>
+    <dimen name="activity_horizontal_margin_top">65dp</dimen>
+    <dimen name="margin_left">5dp</dimen>
+    <dimen name="margin_top">5dp</dimen>
+    <dimen name="layout_padding">15dp</dimen>
 </resources>
