--- a/app/src/main/res/layout/item_listview_student.xml
+++ b/app/src/main/res/layout/item_listview_student.xml
@@ -24,7 +24,7 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/luu_xian_dat"
+            android:text="@string/app_name"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -32,18 +32,18 @@
             android:id="@+id/tv_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/_96_dino_cong" />
+            android:text="@string/app_name" />
 
         <TextView
             android:id="@+id/tv_phone_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/datlx_deha_soft_com" />
+            android:text="@string/dialog_call_or_message" />
 
         <TextView
             android:id="@+id/tv_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/_0346479339" />
+            android:text="@string/app_name" />
     </LinearLayout>
 </LinearLayout>
