--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="margin_left">5dp</dimen>
     <dimen name="margin_top">5dp</dimen>
     <dimen name="layout_padding">15dp</dimen>
+    <dimen name="margin_right">5dp</dimen>
 </resources>
