--- a/app/src/main/res/menu/menu_option_activity_contacts.xml
+++ b/app/src/main/res/menu/menu_option_activity_contacts.xml
@@ -4,28 +4,25 @@
     <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/icon_search"
-        android:title="Search"
+        android:title="@string/search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/btnAddContact"
+        android:id="@+id/btn_create_contact"
         android:icon="@android:drawable/ic_menu_add"
-        android:onClick="activityContactAdd"
         android:title="@string/btn_save_contact"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/btnBackUpGoogleDrive"
+        android:id="@+id/btn_backup_google_drive"
         android:icon="@android:drawable/btn_star"
-        android:onClick="btnBackUpGoogleDriveOnClick"
         android:title="@string/btn_backUpGoogleDrive"
         app:showAsAction="withText" />
 
     <item
-        android:id="@+id/btnImportGoogleDrive"
+        android:id="@+id/btn_import_google_drive"
         android:icon="@android:drawable/btn_star"
-        android:onClick="btnImportGoogleDriveOnClick"
         android:title="@string/btn_ImportGoogleDrive"
         app:showAsAction="never" />
 </menu>
