--- a/app/src/main/res/layout/activity_contact_edit.xml
+++ b/app/src/main/res/layout/activity_contact_edit.xml
@@ -121,7 +121,7 @@
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView"
@@ -130,27 +130,32 @@
                 android:layout_weight="1"
                 android:text="Nhóm" />
 
-            <RadioButton
-                android:id="@+id/rbtFamily"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Gia Đình" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <RadioButton
-                android:id="@+id/rbtOffice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:text="Cơ Quan" />
+                <RadioButton
+                    android:id="@+id/rbtFamily"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Gia Đình" />
 
-            <RadioButton
-                android:id="@+id/rbtFriend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Bạn Bè" />
+                <RadioButton
+                    android:id="@+id/rbtOffice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="Cơ Quan" />
+
+                <RadioButton
+                    android:id="@+id/rbtFriend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Bạn Bè" />
+            </LinearLayout>
         </RadioGroup>
     </LinearLayout>
 
